k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog-astro
  labels:
    name: blog-astro
